--- a/index.html
+++ b/index.html
@@ -1,22 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>g3 architects</title>
     <link rel="stylesheet" href="styles/architects.css">
 </head>
+
 <body class="work-sans-font">
-    <header>
-    <nav class="navbar">
-       <h3 class="brand">G3 Architects</h3>
-    </nav>
+    <header class="bg-light">
+        <nav class="navbar display-flex">
+            <h3 class="brand">G3 Architects</h3>
+            <ul class="nav-links display-flex">
+                <li class="nav-item"><a href="" class="nav-link text-gray">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Contact Us </a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Login</a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand NewGroup of Architects</h1>
+                <p class="lorem">There are many variations of passages of Lorem Ipsum available, but the majority have
+                    suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img src="./images/banner.png" alt="">
+        </div>
     </header>
     <main>
+          <!-- teams our features section -->
+        <section class="teams display-flex">
+            <div class="images">
+                <img src="./images/team1.png" alt="">
+                <img src="./images/team2.png" alt="">
+                <img src="./images/team3.png" alt="">
+                <img src="./images/team4.png" alt="">
+            </div>
+            <div class="features">
+                <h2 class="features-title"> <span class="salate">Quick list</span> <span class="black"> of Our</span> <span class="orang">Features</span></h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <!-- features love & enjoy -->
+         <section>
+         </section>
+         <!-- Some Facts -->
+          <section class="some-facts">
+            <h3>Some Facts</h3>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="some-box">
+                <div class="some-card">
+                  <img src="./images/icons/ribon.png" alt="">
+                  <h3>54</h3>
+                  <p>Awards Winnings</p>
+                </div>
+                <div class="some-card">
+                  <img src="./images/icons/projects.png" alt="">
+                  <h3>54</h3>
+                  <p>Awards Winnings</p>
+                </div>
+                <div class="some-card">
+                  <img src="./images/icons/email.png" alt="">
+                  <h3>54</h3>
+                  <p>Awards Winnings</p>
+                </div>
+                <div class="some-card">
+                  <img src="./images/icons/customers.png" alt="">
+                  <h3>54</h3>
+                  <p>Awards Winnings</p>
+                </div>
+            </div>
+          </section>
 
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
