--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </header>
     <main>
-          <!-- teams our features section -->
+        <!-- teams our features section -->
         <section class="teams display-flex">
             <div class="images">
                 <img src="./images/team1.png" alt="">
@@ -39,41 +39,47 @@
                 <img src="./images/team4.png" alt="">
             </div>
             <div class="features">
-                <h2 class="features-title"> <span class="salate">Quick list</span> <span class="black"> of Our</span> <span class="orang">Features</span></h2>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <h2 class="features-title"> <span class="salate">Quick list</span> <span class="black"> of Our</span>
+                    <span class="orang">Features</span></h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
         <!-- features love & enjoy -->
-         <section>
-         </section>
-         <!-- Some Facts -->
-          <section class="some-facts">
+        <section>
+        </section>
+        <!-- Some Facts -->
+        <section class="some-facts">
             <h3>Some Facts</h3>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
-            <div class="some-box">
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration.</p>
+            <div class="some-box display-flex">
+                <div>
+                    <div class="some-card">
+                        <img src="./images/icons/ribon.png" alt="">
+                        <h3>54</h3>
+                        <p>Awards Winnings</p>
+                    </div>
+                </div>
+
                 <div class="some-card">
-                  <img src="./images/icons/ribon.png" alt="">
-                  <h3>54</h3>
-                  <p>Awards Winnings</p>
+                    <img src="./images/icons/projects.png" alt="">
+                    <h3>1458</h3>
+                    <p>Project Finished</p>
                 </div>
                 <div class="some-card">
-                  <img src="./images/icons/projects.png" alt="">
-                  <h3>54</h3>
-                  <p>Awards Winnings</p>
+                    <img src="./images/icons/email.png" alt="">
+                    <h3>590</h3>
+                    <p>Clients Worked</p>
                 </div>
                 <div class="some-card">
-                  <img src="./images/icons/email.png" alt="">
-                  <h3>54</h3>
-                  <p>Awards Winnings</p>
-                </div>
-                <div class="some-card">
-                  <img src="./images/icons/customers.png" alt="">
-                  <h3>54</h3>
-                  <p>Awards Winnings</p>
+                    <img src="./images/icons/customers.png" alt="">
+                    <h3>22578</h3>
+                    <p>Email Send</p>
                 </div>
             </div>
-          </section>
+        </section>
 
     </main>
     <footer>
