--- a/index.html
+++ b/index.html
@@ -80,6 +80,20 @@
                 </div>
             </div>
         </section>
+        <!-- our-sponsors -->
+        <section class="our">
+              <div class="info">
+                <h2>Our Sponspors</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+              </div>
+              <div class="company">
+                <img src="./images/sponsors/spotify.png" alt="">
+                <img src="./images/sponsors/amazon.png" alt="">
+                <img src="./images/sponsors/google.png" alt="">
+                <img src="./images/sponsors/telerama.png" alt="">
+                <img src="./images/sponsors/figma.png" alt="">
+              </div>
+        </section>
 
     </main>
     <footer>
