--- a/index.html
+++ b/index.html
@@ -47,7 +47,35 @@
             </div>
         </section>
         <!-- features love & enjoy -->
-        <section>
+        <section class="features-love">
+           <div>
+              <h3 class="border">Features you will <br> love & enjoy</h3>
+              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+              <!-- features card -->
+               <div class="feature-card">
+                <h4>Dexktop & Mobile Version</h4>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+               </div>
+               <div class="feature-card">
+                <h4>Dexktop & Mobile Version</h4>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+               </div>
+               <div class="feature-card">
+                <h4>Dexktop & Mobile Version</h4>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+               </div>
+               <div class="feature-card">
+                <h4>Dexktop & Mobile Version</h4>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+               </div>
+           </div>
+           <div class="img">
+           <img src="./images/architect.png" alt="">
+           <button id="experience-badge" class="btn-primary">
+            <span id="experience-year">10+Year</span><br>
+            <span>Experience</span>
+           </button>
+           </div>
         </section>
         <!-- Some Facts -->
         <section class="some-facts">
